@@ -50,24 +50,6 @@ else returns nil. [emu-latin1.el; old MULE emulating function]"
   t)
 
 
-;;; @ without code-conversion
-;;;
-
-(defalias 'insert-binary-file-contents 'insert-file-contents-as-binary)
-(make-obsolete 'insert-binary-file-contents 'insert-file-contents-as-binary)
-
-(defun insert-binary-file-contents-literally (filename
-					      &optional visit beg end replace)
-  "Like `insert-file-contents-literally', q.v., but don't code conversion.
-A buffer may be modified in several ways after reading into the buffer due
-to advanced Emacs features, such as file-name-handlers, format decoding,
-find-file-hooks, etc.
-  This function ensures that none of these modifications will take place."
-  (let ((emx-binary-mode t))
-    ;; Returns list of absolute file name and length of data inserted.
-    (insert-file-contents-literally filename visit beg end replace)))
-
-
 ;;; @ end
 ;;;
 
