@@ -42,24 +42,6 @@
          'encode (symbol-value encoder))))
 
 
-;;; @ without code-conversion
-;;;
-
-(define-obsolete-function-alias 'insert-binary-file-contents
-  'insert-file-contents-as-binary)
-
-(defun insert-binary-file-contents-literally (filename
-					      &optional visit beg end replace)
-  "Like `insert-file-contents-literally', q.v., but don't code conversion.
-A buffer may be modified in several ways after reading into the buffer due
-to advanced Emacs features, such as file-name-handlers, format decoding,
-find-file-hooks, etc.
-  This function ensures that none of these modifications will take place."
-  (let ((coding-system-for-read 'binary))
-    ;; Returns list absolute file name and length of data inserted.
-    (insert-file-contents-literally filename visit beg end replace)))
-
-    
 ;;; @ character
 ;;;
 
