@@ -1,5 +1,9 @@
 1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
 
+	* poe-18.el (make-obsolete): New function.
+
+1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
+
 	* emu.el, EMU-ELS: Split code about MIME charset from emu to
 	mcharset.
 
